--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@ main {
   border-radius: 0;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
     0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
-  margin-bottom: 15vh;
+  margin: 15vh 10vw;
+  width: 20vw;
+  height: 20vh; 
+  padding: 15px;
+  padding-bottom: 30px;
 }
 
